--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 The LLNCS in OrgMode, just type make.
 
 Be aware that this example is compatible with OrgMode 9.*. Earlier
-or later OrgMode versions require minor modifications to the Makefile
+or later OrgMode versions may require minor modifications to the Makefile
 and/or llncs.org files.
 
 For a detailed explanation on why and how to write reproducible
